Requisitar dados do usuário logado